layout : fix scroll positioning in about section on mobile

--- a/css/sect-projects.css
+++ b/css/sect-projects.css
@@ -20,8 +20,9 @@
 
 .project-modal {
   grid-column: 1/-1;
+  grid-row: 1/-1;
   width: 82px;
-  /* height: 20px; */
+  /* height: 40px; */
   justify-self: center;
   align-self: center;
   text-align: center;
